Begin adding integration tests